Add RestPostContentManager